# Port-Place

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  manage.py  pyproject.toml
client/: .dockerignore  .eslintignore  .eslintrc.json  Dockerfile  jest.config.ts  jest.setup.ts  package.json  tsconfig.json
client/app/: layout.tsx  page.tsx
client/src/: Dockerfile
client/src/app/styles/: index.scss  reset.scss
client/src/entities/ApplicationForm/: index.ts
client/src/entities/ApplicationForm/helpers/: errorHandler.ts  getInputState.ts  isAllInputValid.ts
client/src/entities/ApplicationForm/model/: Model.ts
client/src/entities/ApplicationForm/type/: FormTypes.ts
client/src/entities/ApplicationForm/ui/: ApplicationForm.module.scss  ApplicationForm.tsx
client/src/features/Ticker/: index.ts
client/src/features/Ticker/data/: data.ts
client/src/features/Ticker/type/: data.ts
client/src/features/Ticker/ui/: Ticker.module.scss  Ticker.tsx
client/src/pages/MainPage/blocks/AboutBlock/: index.ts
client/src/pages/MainPage/blocks/ImageBlock/: index.ts
client/src/pages/MainPage/blocks/Residents/: index.ts
client/src/pages/MainPage/ui/: Page.module.scss  Page.tsx
client/src/pages/MainPage/ui/blocks/: AboutBlock.module.scss  AboutBlock.tsx  ImageBlock.module.scss  ImageBlock.tsx  Residents.module.scss  Residents.tsx
client/src/shared/helpers/: anchorScroller.ts
client/src/shared/hooks/: useElementOnScreenю.ts  useKeyPress.ts  useScrollTrigger.ts
client/src/shared/ui/Button/: index.ts
client/src/shared/ui/Button/ui/: Button.tsx
client/src/shared/ui/Container/ui/: Container.tsx
client/src/shared/ui/Footer/ui/: Footer.module.scss  Footer.tsx
client/src/shared/ui/Header/ui/: Header.module.scss  Header.tsx
client/src/shared/ui/Input/: index.ts
client/src/shared/ui/Input/helpers/: getCursorPosition.ts
client/src/shared/ui/Input/lib/:  phoneMask.ts
client/src/shared/ui/Input/type/: IInputProps.ts  InputTypes.ts
client/src/shared/ui/Input/ui/: Input.module.scss  Input.tsx
client/src/shared/ui/List/: index.ts
client/src/shared/ui/List/ui/: List.module.scss  List.tsx
client/src/shared/ui/Logo/: index.ts
client/src/shared/ui/Logo/ui/: Logo.tsx
client/src/shared/ui/Modal/: index.ts
client/src/shared/ui/Modal/ui/: Modal.module.scss  Modal.tsx
client/src/shared/ui/Opacity/: index.ts
client/src/shared/ui/Opacity/ui/: Opacity.tsx
client/src/shared/ui/Overlay/: index.ts
client/src/shared/ui/Overlay/helpers/: scrollBlocker.ts
client/src/shared/ui/Overlay/ui/: Overlay.module.scss  Overlay.tsx
client/src/shared/ui/Title/: index.ts
client/src/shared/ui/Title/ui/: Title.module.scss  Title.tsx
client/src/widgets/Typewriter/: index.ts
client/src/widgets/Typewriter/ui/: Typewriter.module.scss  Typewriter.tsx
server/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  manage.py  pyproject.toml  requirements.txt
server/apps/core/: models.py
server/apps/reservations/: apps.py  models.py
server/apps/reservations/migrations/: 0001_initial.py
server/apps/residents/: admin.py  apps.py  const.py  models.py
server/apps/residents/api/: serializers.py  urls.py  views.py
server/apps/residents/migrations/: 0001_initial.py
server/apps/tables/: apps.py  models.py
server/apps/tables/migrations/: 0001_initial.py
server/config/: asgi.py  settings.py  urls.py  wsgi.py
server/src/apps/base/: models.py
server/src/apps/reservations/: models.py
server/src/apps/tables/: const.py  models.py
server/src/apps/users/: models.py
server/src/config/: asgi.py  settings.py  urls.py  wsgi.py
(+8 files in other folders)
